--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Grilled Cheese</h1>
+    <img src="../images/Grilled-Cheese.jpeg" alt="grilled cheese sandwich" width="300" height="300">
 </body>
 </html>
