added steps heading

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -16,6 +16,7 @@
         <li>3 tablespoons butter, divided</li>
         <li>2 slices Cheddar cheese</li>
     </ul>
+    <h4>Steps</h4>
     <ol>
         <li>Preheat skillet over medium heat.</li>
         <li>Generously butter one side of a slice of bread. Place bread butter-side-down onto skillet bottom.</li>
