--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/grilled-cheese.html">Grilled Cheese</a>
+    <a href="recipes/pancakes.html">Pancakes</a>
 </body>
 </html>
