created egg-and-bacon-sandwich.html and added boiler plate html. Also added link to new page in index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/grilled-cheese.html">Grilled Cheese</a>
     <a href="recipes/pancakes.html">Pancakes</a>
+    <a href="recipes/egg-and-bacon-sandwich.html">Egg and Bacon Sandwich</a>
 </body>
 </html>
