--- a/recipes/egg-and-bacon-sandwich.html
+++ b/recipes/egg-and-bacon-sandwich.html
@@ -7,6 +7,22 @@
     <title>Egg and Bacon Sandwich</title>
 </head>
 <body>
-    
+    <h1>Egg and Bacon Sandwich</h1>
+    <img src="../images/egg-bacon-sandwich.jpeg" alt="Egg and Bacon Sandwich" width="300" height="300">
+    <h3>French Toast with egg and bacon in the center with maple syrup on top. Sprinkle with powdered sugar if desired.</h3>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>2 eggs, beaten</li>
+        <li>4 slices bread</li>
+        <li>4 slices bacon</li>
+        <li>2 eggs</li>
+        <li>1/2 cup maple syrup</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Dip bread slices in beaten eggs. Heat a lightly oiled griddle or frying pan over medium high heat. Cook until browned on both sides. Set aside but keep warm.</li>
+        <li>Place bacon in a large, deep skillet. Cook over medium high heat until evenly brown. Drain and set aside. Reserve 1 tablespoon of bacon grease in pan and fry remaining two eggs.</li>
+        <li>Place one piece of French toast on each of two plates. Place the fried eggs on top of the bread, top the eggs with strips of bacon. Cover with the remaining pieces of French toast. Following that by pouring on the syrup.</li>
+    </ol>
 </body>
 </html>
