moved links into an unordered list in index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/grilled-cheese.html">Grilled Cheese</a>
-    <a href="recipes/pancakes.html">Pancakes</a>
-    <a href="recipes/egg-and-bacon-sandwich.html">Egg and Bacon Sandwich</a>
+    <ul>
+    <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+    <li><a href="recipes/pancakes.html">Pancakes</a></li>
+    <li><a href="recipes/egg-and-bacon-sandwich.html">Egg and Bacon Sandwich</a></li>
+    </ul>
 </body>
 </html>
