created styles.css and startedto add styling

--- a/recipes/egg-and-bacon-sandwich.html
+++ b/recipes/egg-and-bacon-sandwich.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Egg and Bacon Sandwich</title>
 </head>
 <body>
-    <h1>Egg and Bacon Sandwich</h1>
+    <H1>Odin Recipes</H1>
+    <hr>
+    <h2>Egg and Bacon Sandwich</h2>
     <img src="../images/egg-bacon-sandwich.jpeg" alt="Egg and Bacon Sandwich" width="300" height="300">
     <h3>French Toast with egg and bacon in the center with maple syrup on top. Sprinkle with powdered sugar if desired.</h3>
     <h4>Ingredients</h4>
