--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Grilled Cheese</title>
 </head>
 <body>
-    <h1>Grilled Cheese</h1>
+    <H1>Odin Recipes</H1>
+    <hr>
+    <h2>Grilled Cheese</h2>
     <img src="../images/Grilled-Cheese.jpeg" alt="grilled cheese sandwich" width="300" height="300">
     <h3>Bread, butter and Cheddar cheese - here's a way to make this classic sandwich in a nonstick pan.</h3>
     <h4>Ingredients</h4>
