--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pancakes</title>
 </head>
 <body>
-    <h1>Pancakes</h1>
+    <H1>Odin Recipes</H1>
+    <hr>
+    <h2>Pancakes</h2>
     <img src="../images/Pancakes.jpeg" alt="Pancakes" width="300" height="300">
     <h3>A pancake (or hot-cake, griddlecake, or flapjack) is a flat cake, often thin and round</h3>
     <h4>Ingredients</h4>
