added cards to index.html and respective css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,44 @@
     <h1>Odin Recipes</h1>
     <hr>
     <ul>
-    <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
-    <li><a href="recipes/pancakes.html">Pancakes</a></li>
-    <li><a href="recipes/egg-and-bacon-sandwich.html">Egg and Bacon Sandwich</a></li>
+        <div class="recipe-cards">
+            <a href="recipes/egg-and-bacon-sandwich.html">
+                <div class="card">
+                    <img class="card-image" src="images/egg-bacon-sandwich.jpeg" alt="egg and bacon sandwich">
+                    <div class="container">
+                        <h4>Egg & Bacon Sandwich</h4>
+                        <p>French Toast with egg and bacon in the center with maple syrup on top. Sprinkled with powdered sugar.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="recipes/grilled-cheese.html">
+                <div class="card">
+                    <img class="card-image" src="images/Grilled-Cheese.jpeg" alt="grilled cheese sandwich">
+                    <div class="container">
+                        <h4>Grilled Cheese</h4>
+                        <p>Bread, butter and Cheddar cheese - here's a way to make this classic sandwich in a nonstick pan.</p>
+                    </div>
+                </div>
+            </a>
+            <a href="recipes/pancakes.html">
+                <div class="card">
+                    <img class="card-image" src="images/Pancakes.jpeg" alt="stack of pancakes">
+                    <div class="container">
+                        <h4>Pancake</h4>
+                        <p>A pancake (or hot-cake, griddlecake, or flapjack) is a flat cake, often thin and round.</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+
+
+
+
+
+        <!--<li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+        <li><a href="recipes/pancakes.html">Pancakes</a></li>
+        <li><a href="recipes/egg-and-bacon-sandwich.html">Egg and Bacon Sandwich</a></li>-->
     </ul>
 </body>
 </html>
