--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -10,23 +10,28 @@
 <body>
     <H1>Odin Recipes</H1>
     <hr>
-    <h2>Grilled Cheese</h2>
-    <img src="../images/Grilled-Cheese.jpeg" alt="grilled cheese sandwich" width="300" height="300">
-    <h3>Bread, butter and Cheddar cheese - here's a way to make this classic sandwich in a nonstick pan.</h3>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>4 slices white bread</li>
-        <li>3 tablespoons butter, divided</li>
-        <li>2 slices Cheddar cheese</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Preheat skillet over medium heat.</li>
-        <li>Generously butter one side of a slice of bread. Place bread butter-side-down onto skillet bottom.</li>
-        <li>Add 1 slice of cheese.</li>
-        <li>Butter a second slice of bread on one side and place butter-side-up on top of sandwich.</li>
-        <li>Grill until lightly browned and flip over; continue grilling until cheese is melted.</li>
-        <li>Repeat with remaining 2 slices of bread, butter and slice of cheese.</li>
-    </ol>
+    <div class="recipe">
+        <h2>Grilled Cheese</h2>
+        <img src="../images/Grilled-Cheese.jpeg" alt="grilled cheese sandwich" width="300" height="300">
+        <h3>Bread, butter and Cheddar cheese - here's a way to make this classic sandwich in a nonstick pan.</h3>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>4 slices white bread</li>
+            <li>3 tablespoons butter, divided</li>
+            <li>2 slices Cheddar cheese</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Preheat skillet over medium heat.</li>
+            <li>Generously butter one side of a slice of bread. Place bread butter-side-down onto skillet bottom.</li>
+            <li>Add 1 slice of cheese.</li>
+            <li>Butter a second slice of bread on one side and place butter-side-up on top of sandwich.</li>
+            <li>Grill until lightly browned and flip over; continue grilling until cheese is melted.</li>
+            <li>Repeat with remaining 2 slices of bread, butter and slice of cheese.</li>
+        </ol>
+        <a href="../index.html">
+            <button class="home-button">More Recipes</button>
+        </a>
+    </div>
 </body>
 </html>
