--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -10,23 +10,28 @@
 <body>
     <H1>Odin Recipes</H1>
     <hr>
-    <h2>Pancakes</h2>
-    <img src="../images/Pancakes.jpeg" alt="Pancakes" width="300" height="300">
-    <h3>A pancake (or hot-cake, griddlecake, or flapjack) is a flat cake, often thin and round</h3>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>1 1/2 cups all-purpose flour</li>
-        <li>3 1/2 teaspoons baking powder</li>
-        <li>1/4 teaspoon salt, or more to taste</li>
-        <li>1 tablespoon white sugar</li>
-        <li>1 1/4 cups milk</li>
-        <li>1 egg</li>
-        <li>3 tablespoons butter, melted</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg and melted butter; mix until smooth.</li>
-        <li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. Brown on both sides and serve hot.</li>
-    </ol>
+    <div class="recipe">
+        <h2>Pancakes</h2>
+        <img src="../images/Pancakes.jpeg" alt="Pancakes" width="300" height="300">
+        <h3>A pancake (or hot-cake, griddlecake, or flapjack) is a flat cake, often thin and round</h3>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>1 1/2 cups all-purpose flour</li>
+            <li>3 1/2 teaspoons baking powder</li>
+            <li>1/4 teaspoon salt, or more to taste</li>
+            <li>1 tablespoon white sugar</li>
+            <li>1 1/4 cups milk</li>
+            <li>1 egg</li>
+            <li>3 tablespoons butter, melted</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg and melted butter; mix until smooth.</li>
+            <li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. Brown on both sides and serve hot.</li>
+        </ol>
+        <a href="../index.html">
+            <button class="home-button">More Recipes</button>
+        </a>
+    </div>  
 </body>
 </html>
